--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,18 +1,18 @@
 {
   "dependencies": {
     "com.manakhovn.figma_to_unity_importer": "https://github.com/ManakhovN/FigmaToUnityImporter.git?path=/Assets/FigmaImporter",
-    "com.unity.collab-proxy": "2.0.0",
-    "com.unity.feature.2d": "1.0.0",
-    "com.unity.ide.rider": "3.0.18",
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.feature.2d": "2.0.1",
+    "com.unity.ide.rider": "3.0.34",
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.localization": "1.3.2",
-    "com.unity.mobile.android-logcat": "1.3.2",
-    "com.unity.test-framework": "1.1.31",
+    "com.unity.localization": "1.5.2",
+    "com.unity.mobile.android-logcat": "1.4.3",
+    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.9",
-    "com.unity.timeline": "1.6.4",
+    "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.8.0",
+    "com.unity.visualscripting": "1.9.4",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
