--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "com.google.android.appbundle": "1.10.0",
+    "com.google.external-dependency-manager": "1.2.187",
+    "com.google.play.assetdelivery": "1.9.5",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.assetbundlebrowser": "https://github.com/Unity-Technologies/AssetBundles-Browser.git",
     "com.unity.feature.2d": "2.0.1",
@@ -45,5 +48,18 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "package.openupm.com",
+      "url": "https://package.openupm.com",
+      "scopes": [
+        "com.google.external-dependency-manager",
+        "com.google.play.common",
+        "com.google.play.core",
+        "com.google.play.assetdelivery",
+        "com.google.android.appbundle"
+      ]
+    }
+  ]
 }
