--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,56 @@ fmod_editor.log
 /[Aa]ssets/Plugins/FMOD/Cache/*
 /Assets/VSCode
 Assets/VSCode.meta
+Assets/FMOD/.unsaved/metadataFileMapping.data
+Assets/FMOD/.unsaved/Metadata/Event/{ab9ece7e-6638-4c22-a7db-6b006b672932}.xml
+Assets/FMOD/.cache/{03366c51-4795-4234-ae0e-55d6023ac396}.pdc
+Assets/FMOD/.cache/fsbcache/Desktop/FF2E8D7D.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/F9343E2D.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/F89CCD50.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/F656F738.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/F48F7F0C.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/EFCCADAB.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/E9202ABC.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/E5D5124D.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/C9A622AE.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/B4240E34.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/ADCDBACD.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/AC7A03CE.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/AB39534F.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/AAD5337F.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/A3927D35.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/A107A751.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/9780C4D4.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/9395E9DC.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/8E155428.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/87578C93.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/8243F8B5.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/80B59777.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/7FD31F5A.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/7A700AA7.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/72CB7AF9.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/72B2E462.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/70BC66C0.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/6C305A5C.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/6917BF0F.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/6106FC3A.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/4A2CC26A.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/49EA7CFA.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/46DC3BDC.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/3245D015.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/31C7E400.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/3136D428.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/2FE6319B.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/2E0B83DD.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/2DC4F553.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/26C4CF5D.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/252D2B1A.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/2118413A.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/17F015CB.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/1583D10A.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/0F285F99.fobj
+Assets/FMOD/.cache/fsbcache/Desktop/076A3D7D.fobj
+Assets/FMOD/.cache/buildrecords/Desktop/SFX.br
+Assets/FMOD/.cache/buildrecords/Desktop/Master.br
+Assets/FMOD/.cache/buildrecords/Desktop/BGM.br
+Assets/FMOD/.cache/buildrecords/Desktop/AMB.br
