스트리밍 애셋 뱅크...뱅크가 왜 중복으로 들었지? 하지만 올립니다
1

--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,4 @@ Assets/FMOD/.cache/buildrecords/Desktop/SFX.br
 Assets/FMOD/.cache/buildrecords/Desktop/Master.br
 Assets/FMOD/.cache/buildrecords/Desktop/BGM.br
 Assets/FMOD/.cache/buildrecords/Desktop/AMB.br
+*.pdc
