--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.localization": "1.5.2",
     "com.unity.mobile.android-logcat": "1.4.5",
+    "com.unity.mobile.notifications": "2.4.3",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.timeline": "1.7.7",
